fix: add gap between flex items in image layout for improved spacing

--- a/site-styles/image-styling.css
+++ b/site-styles/image-styling.css
@@ -11,7 +11,10 @@
 .flex-6-4 {
     display: flex;
     width: 100%;
-    gap: 5%;
+}
+
+.flex-6-4-gap {
+    flex: .25;
 }
 
 .flex-6 {
